Changed Paths.get to Path.of.